<resources>
    <string name="app_name">仓储系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ware_title">请扫描/输入库单号或客户订单号(选一即可)</string>
    <string name="ware_title1">请扫描/输入产品</string>
    <string name="ware_danhao">入库单号</string>
    <string name="ware_dingdan">客户订单号</string>
    <string name="ware_while">📄 逐件</string>
    <string name="ware_sure">√ 确定</string>
    <string name="ware_cancle">× 取消</string>
    <string name="ware_product">产品</string>
    <string name="ware_prod_name">品名</string>
    <string name="menu_search" />
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="guide_1">全新改版</string>
    <string name="guide_2">视频购物</string>
    <string name="guide_3">评价晒图</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="stop">结束</string>
    <string name="uhf_please_stop">请先停止读标签!</string>
    <string name="uhf_low_power_info">电量低,请充电!</string>
    <string name="uhf_low_power_consumption">副电点亮低， 是否切换到主电池?</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密	码</string>
    <string name="number">序号</string>
    <string name="EPC">EPC</string>
    <string name="shelf">货架</string>
    <string name="setting">设置</string>
    <string name="versions">版本</string>
    <string name="power">功率</string>
    <string name="frequency">频率</string>
    <string name="base_band_rate">基带速率</string>
    <string name="Qvalue">Q值</string>
    <string name="session">Session</string>
    <string name="get">获取</string>
    <string name="main_out">出库</string>
    <string name="main_out_box">装箱</string>
    <string name="main_in">入库</string>
    <string name="store_in">入店</string>
    <string name="main_check">盘点</string>
    <string name="main_scan">扫描查询</string>
    <string name="main_more">更多</string>
    <string name="readEpc">读EPC</string>
    <string name="readCount">读取次数</string>
    <string name="readTemp">读取温度</string>
    <string name="Tag_Time">Time:0 S </string>
    <string name="Tag_Count">Total:0</string>
    <string name="Tag_ReadTotalCount">SP:0 T/S</string>
    <string name="back">返回</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="error_unkown">未知错误</string>
    <string name="error_http">网络连接错误</string>
    <string name="error_system">服务器出错</string>
    <string name="error_account_freeze">账户被冻结，请联系管理员</string>
    <string name="error_api_no_perission">调用了无权限的API接口</string>
    <string name="error_login">用户名或者密码错误</string>
    <string name="error_http_400">bad request</string>
    <string name="error_http_404">服务器资源找不到</string>
    <string name="error_http_500">服务器错误</string>
    <string name="error_socket_timeout">网络超时</string>
    <string name="error_socket_unreachable">网络不可用</string>
    <string name="loading">加载中...</string>
    <string name="empty_data">暂无数据</string>
    <string name="hot_game">热门游戏</string>
    <string name="hot_top">热门主题</string>
    <string name="hot_app">热门应用</string>
    <string name="mobi">账号</string>
    <string name="password">密码</string>
    <string name="login">登   录</string>
    <string name="default_loading">loading</string>
    <string name="apps_update">应用切换</string>
    <string name="sys_setting">系统设置</string>
    <string name="logining">正在登陆...</string>
    <string name="logout">退出登录</string>
    <string name="download">下载</string>
    <string name="manage">管理</string>
    <string name="error_token">登录失效，请重新登录</string>
    <string name="epc_sku_num">货品款号:</string>
    <string name="epc_ware_house_position">仓位:</string>
    <string name="epc_left_num">库存量:</string>
    <string name="epc_shop_qcode">货品条码:</string>
    <string name="rapid_read">Rapid Read</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string-array name="options_array">
        <item>主菜单</item>
        <item>设置</item>
        <item>退出</item>

        <item>收货</item>
        <item>上架</item>
        <item>拣货</item>
        <item>库存移动</item>
        <item>库存查询</item>
        <item>库存盘点</item>
        <item>系统设置</item>

    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_none">None</string>
    <string name="action_user">User</string>
    <string name="action_reserved">Reserved</string>
    <string name="action_tid">TID</string>
    <string name="action_epic">EPC</string>
    <string name="title_activity_antenna_settings">Antenna</string>
    <string name="title_activity_readers_list">Readers List</string>
    <string name="title_activity_application_settings">Application</string>
    <string name="title_activity_singulation_control">Singulation Control</string>
    <string name="unique_tag_settings">Unique Tag Settings</string>
    <string name="unique_tag_reads">Report Unique tags</string>
    <string name="report_unique_tags">Report Unique tags</string>
    <string-array name="link_profile_array">
        <item>RF Mode 1</item>
        <item>RF Mode 2</item>
        <item>RR Mode 1</item>
        <item>RR Mode 2</item>
        <item>RS Mode 1</item>
        <item>RS Mode 2</item>
    </string-array>
    <string-array name="session_array">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string-array name="tag_population_array">
        <item>30</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
    </string-array>
    <string-array name="inventory_state_array">
        <item>STATE A</item>
        <item>STATE B</item>
        <item>AB FLIP</item>
    </string-array>
    <string-array name="sl_flags_array">
        <item>ALL</item>
        <item>DEASSERTED</item>
        <item>ASSERTED</item>
    </string-array>
    <string-array name="inv_menu_items">
        <item>None</item>
        <item>User</item>
        <item>Reserved</item>
        <item>TID</item>
        <item>EPC</item>
    </string-array>
    <string-array name="acess_read_write_memory_bank_array">
        <item>EPC</item>
        <item>RESV</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="acess_lock_memory_bank_array">
        <item>EPC</item>
        <item>ACCESS PWD</item>
        <item>KILL PWD</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="acess_lock_privilege_array">
        
        <item>Read and Write</item>
        <item>Permanent Lock</item>
        <item>Permanent Unlock</item>
        <item>Unlock</item>
    </string-array>
    <string-array name="pre_filter_memory_bank_array">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="pre_filter_action_array">
        <item>INV A NOT INV B OR ASRT SL NOT DSRT SL</item>
        <item>INV A OR ASRT SL</item>
        <item>NOT INV B OR NOT DSRT SL</item>
        <item>INV A2BB2A NOT INV A OR NEG SL NOT ASRT SL</item>
        <item>INV B NOT INV A OR DSRT SL NOT ASRT SL</item>
        <item>INV B OR DSRT SL</item>
        <item>NOT INV A OR NOT ASRT SL</item>
        <item>NOT INV A2BB2A OR NOT NEG SL</item>
    </string-array>
    <string-array name="pre_filter_target_options">
        <item>SESSION S0</item>
        <item>SESSION S1</item>
        <item>SESSION S2</item>
        <item>SESSION S3</item>
        <item>SL FLAG</item>
    </string-array>
    <string-array name="pre_filter_tag_id_array">
        <item>AD9915404190725965400412</item>
        <item>AD9915404190725965400413</item>
        <item>AD9915404190725965400414</item>
        <item>AD9915404190725965400415</item>
        <item>AD9915404190725965400416</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_activity_access_operations">AccessOperationsActivity</string>
    <string-array name="start_trigger_array">
        <item>Immediate</item>
        <item>Handheld</item>
        <item>Periodic</item>
    </string-array>
    <string-array name="stop_trigger_array">
        <item>Immediate</item>
        <item>Handheld</item>
        <item>Duration</item>
        <item>Tag Observation</item>
        <item>N attempts</item>
    </string-array>
    <string-array name="beeper_volume_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string name="none_paired">No Devices Found</string>
    <string name="select_device">Select A Device</string>
    <string name="none_found">No Devices Found</string>
    <string name="error_security">Security Error in SerialPortActivity</string>
    <string name="error_unknown">Unknown Error in Serial Port Activity</string>
    <string name="error_configuration">Configuration Error in SerialPortActivity</string>
    <string name="title_activity_base_receiver">BaseReceiverActivity</string>
    <string name="error_unsatisfied_link">UnsatisfiedLinkError in SerialPortActivity</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_regulatory_settings">Regulatory</string>
    <string name="title_activity_start_stop_trigger">Start\\Stop Triggers</string>
    <string name="title_activity_save_configuration">Save Configuration</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_beeper">Beeper</string>
    <string name="title_activity_led">LED</string>
    <string name="led_settings_title">Host LED Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings_detail">Setting Details</string>
    <string name="action_search">Search</string>
    <string name="action_rr">Rapid Read</string>
    <string name="search_hint">Enter Tag ID</string>
    <string name="active_reader_title">Active Reader</string>
    <string name="available_readers_title">Available Readers</string>
    <string name="channel_selection">Channel Selection</string>
    <string name="reader_conn_sett">Reader Connection Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="tag_reporting">Tag Reporting</string>
    <string name="battery">Battery</string>
    <string name="rr_unique_tags_title">Unique Tags</string>
    <string name="rr_total_tag_title">TOTAL READS</string>
    <string name="rr_read_time_title">READ TIME</string>
    <string name="rr_read_rate_title">READ RATE</string>
    <string name="start_title">START</string>
    <string name="tag_id">Tag ID</string>
    <string name="locationing_distance_title">Relative Distance</string>
    <string name="stop_title">STOP</string>
    <string name="tag_pattern_title">Tag Pattern</string>
    <string name="password_title">Password</string>
    <string name="memory_bank_title">Memory Bank</string>
    <string name="offset_title">Offset (words)</string>
    <string name="length_title">Length (words)</string>
    <string name="data_title">Data</string>
    <string name="operation_success">Operation Completed Successfully</string>
    <string name="read_title">READ</string>
    <string name="write_title">WRITE</string>
    <string name="lock_privilege_title">Lock Privilege</string>
    <string name="lock_title">LOCK</string>
    <string name="kill_pass_title">Kill Password</string>
</resources>