<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:focusableInTouchMode="true"
    tools:context=".ui.activity.ReceiveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/error"/>

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_red_500"
            android:text="@string/ware_title"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:text="@string/ware_danhao"/>

    <EditText
        android:id="@+id/et_danhao"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_text"
        android:hint="请输入入库单号"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:text="@string/ware_dingdan"/>

    <EditText
        android:id="@+id/et_dingdan"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_text"
        android:hint="请输入客户订单号"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/bt_sure"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_alignParentBottom="true"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="@string/ware_sure"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="@string/ware_cancle"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>