<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".ui.activity.ReceiveMessActivity">

        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/error"/>

            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_red_500"
                android:text="@string/ware_title1"/>

        </LinearLayout>

        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:textSize="18sp"
            android:text="@string/ware_product"/>

        <EditText
            android:layout_margin="5dp"
            android:id="@+id/et_danhao"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ed_height"
            android:background="@drawable/back_text"
            android:hint="请输入产品"
            android:gravity="center"/>

        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/ware_prod_name"/>

        <EditText
            android:id="@+id/edt_pinming"
            android:layout_margin="5dp"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ed_height"
            android:enabled="false"
            android:background="@drawable/back_text_gray"
            android:gravity="center"/>

        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="18sp"
                    android:text="预期数量"/>

                <EditText
                    android:id="@+id/edt_yuqi"
                    android:singleLine="true"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ed_height"
                    android:background="@drawable/back_text_gray"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:text="包装规格"/>

                <EditText
                    android:id="@+id/edt_baozhuang"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ed_height"
                    android:enabled="false"
                    android:text="1CS/10EA"
                    android:background="@drawable/back_text_gray"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:text="收货数量"/>

                <EditText
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ed_height"
                    android:background="@drawable/back_text"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:text="收货跟踪号"/>

                <EditText
                    android:id="@+id/et_dingdan"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ed_height"
                    android:background="@drawable/back_text"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:textSize="18sp"
                    android:text="已收数量"/>

                <EditText
                    android:id="@+id/edt_yishou"
                    android:singleLine="true"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ed_height"
                    android:background="@drawable/back_text_gray"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:text="单位"/>

                <Spinner
                    android:id="@+id/sp_cangku"
                    android:singleLine="true"
                    android:gravity="center"
                    android:background="@drawable/spinner_back"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ed_height"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:text="收货库位"/>

                <EditText
                    android:id="@+id/ed_plan"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ed_height"
                    android:background="@drawable/back_text"
                    android:gravity="center"/>
            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/bt_while"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_alignParentBottom="true"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:text="@string/ware_while"/>

                <Button
                    android:id="@+id/bt_sure"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_alignParentBottom="true"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:text="@string/ware_sure"/>

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:text="@string/ware_cancle"/>
            </LinearLayout>

        </RelativeLayout>

</LinearLayout>